tests/errors/goto_undefined_label.f90
program missing_goto_label
  goto 20
end program missing_goto_label
